Fix overflow scroll.

--- a/skin/overlay.css
+++ b/skin/overlay.css
@@ -35,101 +35,6 @@
  *
  * ***** END LICENSE BLOCK ***** */
 
-/*FIXME: this should be in the Orion theme, see bug 740354 */
-.token_number {
-  color: #174f8a; /* dark blue */
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  padding-right: 4px;
-}
-
-ol {
-  list-style-type: none;
-  padding-left: 2ex;
-}
-body > ol {
-  padding-left: 1ex;
-}
-
-li {
-  width: 100%;
-}
-
-li > div {
-  width: 100%;
-  clear: both;
-  padding-top: 2px;
-  padding-bottom: 2px;
-}
-li:hover > div {
-  background: #cddae5; /*FIXME:*/
-}
-
-dt, dd {
-  margin: 0;
-  padding: 0;
-}
-dd {
-  padding-right: 1ex;
-}
-dd[contenteditable] {
-  min-width: 10ex; /* enough room for undefined (the default value) */
-  min-height: 1em;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  padding-left: 1ex;
-}
-
-.function-arguments dt,
-.function-events dt {
-  float: left;
-}
-
-.function-arguments dt {
-  font-style: italic;
-}
-.function-arguments > li dd:first-of-type,
-.function-events > li dd:first-of-type {
-  text-align: right;
-}
-
-.declaration {
-  font-weight: bold;
-}
-
-.return {
-  font-weight: bold;
-}
-
-.exception dt {
-  font-weight: bold;
-  color: red;
-}
-
-.element {
-  color: green;
-}
-
-ol.abort-reasons > li {
-  display: none;
-  margin-top: 2em;
-}
-ol.abort-reasons dt {
-  color: red;
-  margin-bottom: 1em;
-}
-ol.abort-reasons dd {
-  display: block;
-}
-
-body[data-abort-reason=NO_FUNCTION] li[data-abort-reason=NO_FUNCTION],
-body[data-abort-reason=PARSE_ERROR] li[data-abort-reason=PARSE_ERROR] {
-  display: block;
-}
-
-body[data-abort-reason] > ol:not(.abort-reasons) {
-  display: none;
+#scratchpad-live-evaluator {
+  border-left: 8px solid #cddae5; /*FIXME:*/
 }
